--- a/tp70/index.html
+++ b/tp70/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PHP OOP</title>
 </head>
 <body>
     <form action="class.php" method="post">
         <label for="txt">Ingresar nombre: </label>
-        <input type="text" name="name" id="name"><br>
+        <input type="text" name="nombre" id="nombre"><br>
         <label for="Horas trabajadas">Ingresar numero de horas trabajadas:</label>
-        <input type="number" name="hours" id="hours"><br>
+        <input type="number" name="horas" id="horas"><br>
         <label for="sueldo">Ingresar sueldo por horas: </label>
-        <input type="number" name="salary" id="salary">
+        <input type="number" name="salario" id="salario">
         <input type="submit" value="Enviar">
     </form>
 </body>
